# Computer-Graphic

ExampleTriangle/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.h
Task1/: CMakeLists.txt  GeometryEngine.cpp  GeometryEngine.h  MainWindow.cpp  MainWindow.h  main.cpp
Task1/Shaders/: vshader.glsl
Task2/: CMakeLists.txt  GLWindow.cpp  GLWindow.h  GeometryEngine.cpp  GeometryEngine.h  SlidersGroup.cpp  SlidersGroup.hpp  Window.cpp  Window.hpp  main.cpp  vshader.glsl
Task2/Shaders/: fshader.glsl
Task3/: CMakeLists.txt  GeometryEngine.cpp  GeometryEngine.hpp  InputController.cpp  InputController.hpp  MainWindow.cpp  MainWindow.hpp  Window.cpp  phong_fshader.glsl  phong_vshader.glsl
Task4/: CMakeLists.txt  GLWindow.cpp  GLWindow.hpp  MyWidget.cpp  MyWidget.hpp  SquareWindow.cpp  SquareWindow.hpp  main.cpp  phong_fragment.glsl  phong_vertex.glsl
Task5/: CMakeLists.txt  InputController.cpp  InputController.hpp  MainWindow.cpp  MainWindow.hpp  Window.hpp  guro_fshader.glsl  main.cpp  phong_fshader.glsl  phong_vshader.glsl
Task6/: CMakeLists.txt  GLWindow.cpp  GLWindow.hpp  Sphere.cpp  Sphere.hpp  SphereWindow.cpp  SphereWindow.hpp  main.cpp
Task6/Shaders/: cube_fragment.glsl  cube_vertex.glsl
Task7/: CMakeLists.txt  CubeWindow.cpp  MainWindow.cpp  MeshObjectLoader.hpp  fragmentShader3  parser.cpp  parser.h  sphere.cpp  sphere.h
Task7/Task7/: CubeWindow.h  MainWindow.hpp  MeshObjectLoader.cpp  Params.h  SphereWindow.cpp  SphereWindow.h  cubesettingswindow.cpp  cubesettingswindow.h  cubesettingswindow.ui  fragmentShader2  main.cpp  vertexShader2
Task8/: CMakeLists.txt  Edge.cpp  InputController.cpp  InputController.hpp  Params.h  RoadWindow.cpp  cubesettingswindow.cpp  fragmentShader3.glsl  openglwindow.cpp  openglwindow.h
Task8/task8/: Edge.hpp  RoadWindow.h  cubesettingswindow.h  cubesettingswindow.ui  main.cpp  openglwindow.h  vertexShader3.glsl
